migration away from model to view-on-protocol-section ... complete!